Cancel takes back to Dashboard

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -150,14 +150,14 @@
                     <div class="col-sm-3 ">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="early-morning-session" data-day-of-the-week="Monday">EMPTY</button>
+                            data-timetable-session="early-morning-session" data-day-of-the-week="Monday">Empty</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column "></div>
                     <div class="col-sm-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="late-morning-session" data-day-of-the-week="Monday">EMPTY</button>
+                            data-timetable-session="late-morning-session" data-day-of-the-week="Monday">Empty</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
@@ -165,7 +165,7 @@
                     <div class="col-sm-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="afternoon-session" data-day-of-the-week="Monday">EMPTY</button>
+                            data-timetable-session="afternoon-session" data-day-of-the-week="Monday">Empty</button>
                         </div>
                     </div>
                 </div>
@@ -175,14 +175,14 @@
                     <div class="col-sm-3 ">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="early-morning-session" data-day-of-the-week="Tuesday">EMPTY</button>
+                            data-timetable-session="early-morning-session" data-day-of-the-week="Tuesday">Empty</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column "></div>
                     <div class="col-sm-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="late-morning-session" data-day-of-the-week="Tuesday">EMPTY</button>
+                            data-timetable-session="late-morning-session" data-day-of-the-week="Tuesday">Empty</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
@@ -190,7 +190,7 @@
                     <div class="col-sm-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="afternoon-session" data-day-of-the-week="Tuesday">EMPTY</button>
+                            data-timetable-session="afternoon-session" data-day-of-the-week="Tuesday">Empty</button>
                         </div>
                     </div>
                 </div>
@@ -200,14 +200,14 @@
                     <div class="col-sm-3 ">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="early-morning-session" data-day-of-the-week="Wednesday">EMPTY</button>
+                            data-timetable-session="early-morning-session" data-day-of-the-week="Wednesday">Empty</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column "></div>
                     <div class="col-sm-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="late-morning-session" data-day-of-the-week="Wednesday">EMPTY</button>
+                            data-timetable-session="late-morning-session" data-day-of-the-week="Wednesday">Empty</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
@@ -215,7 +215,7 @@
                     <div class="col-sm-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="afternoon-session" data-day-of-the-week="Wednesday">EMPTY</button>
+                            data-timetable-session="afternoon-session" data-day-of-the-week="Wednesday">Empty</button>
                         </div>
                     </div>
                 </div>
@@ -225,14 +225,14 @@
                     <div class="col-sm-3 ">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="early-morning-session" data-day-of-the-week="Thursday">EMPTY</button>
+                            data-timetable-session="early-morning-session" data-day-of-the-week="Thursday">Empty</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column "></div>
                     <div class="col-sm-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="late-morning-session" data-day-of-the-week="Thursday">EMPTY</button>
+                            data-timetable-session="late-morning-session" data-day-of-the-week="Thursday">Empty</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
@@ -240,7 +240,7 @@
                     <div class="col-sm-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="afternoon-session" data-day-of-the-week="Thursday">EMPTY</button>
+                            data-timetable-session="afternoon-session" data-day-of-the-week="Thursday">Empty</button>
                         </div>
                     </div>
                 </div>
@@ -250,14 +250,14 @@
                     <div class="col-sm-3 ">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="early-morning-session" data-day-of-the-week="Friday">EMPTY</button>
+                            data-timetable-session="early-morning-session" data-day-of-the-week="Friday">Empty</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column "></div>
                     <div class="col-sm-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="late-morning-session" data-day-of-the-week="Friday">EMPTY</button>
+                            data-timetable-session="late-morning-session" data-day-of-the-week="Friday">Empty</button>
                         </div>
                     </div>
                     <div class="col-sm-1 small-column"></div>
@@ -265,7 +265,7 @@
                     <div class="col-sm-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
-                            data-timetable-session="afternoon-session" data-day-of-the-week="Friday">EMPTY</button>
+                            data-timetable-session="afternoon-session" data-day-of-the-week="Friday">Empty</button>
                         </div>
                     </div>
                 </div>
@@ -273,7 +273,9 @@
 
             <div class="clear-cancel-save-buttons">
                 <button id="clear-subjects-from-class-timetable-button" type="button" class="btn btn-lg btn-secondary">Clear</button>
-                <button id="cancel-class-timetable-button" type="button" class="btn btn-lg btn-secondary">Cancel</button>
+                <button id="cancel-class-timetable-button" type="button" class="btn btn-lg btn-secondary">
+                    <a href="/app">Cancel</a>
+                </button>
                 <button id="save-class-timetable-button" type="button" class="btn btn-lg btn-primary">Save</button>
             </div>
         </div>
