Plus for toggle subjects

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -101,7 +101,7 @@
     </aside>
 
     <div id="show-subjects-button-div" class="container text-center justify-content-center">
-        <button id="show-subjects-button" class="rounded btn btn-secondary">Show Subjects</button>
+        <button id="show-subjects-button" class="rounded btn btn-secondary">&plus;</button>
     </div>
 
 
