--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -27,9 +27,9 @@
         <div class="container text-center class-timetable-subject-nav-background justify-content-center">
             <span>
                 <h2>Subjects
-                <button id="class-timetable-subject-aside-toggle-button" type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&minus;</span>
-                </button>
+                    <button id="class-timetable-subject-aside-toggle-button" type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&minus;</span>
+                    </button>
                 </h2>
             </span>
 
@@ -321,11 +321,17 @@
                         </div>
                     </button>
                     <button id="add-subject-to-fill-session-button" type="button" class="btn btn-secondary progress-bar-striped quick-select-button" >
-                        Fill Session
+                        Full Session
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </button>
+
+                    <div class="d-flex justify-content-center">
+                        <button id="fill-rest-session-button" type="button" class="btn btn-secondary progress-bar-striped quick-select-button" >
+                            Fill The Rest Of Session
+                        </button>
+                    </div>
 
                     <div class="d-flex justify-content-center">
                         <button id="precise-time-button" type="button" class="btn btn-info quick-select-button" >
