duration now changes when end time altered .. rather than start time

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -349,15 +349,15 @@
                                 <input id="timepicker1" type="text" class="form-control input-small">
                             </div>
 
-                            <div class="align-text-middle precise-lesson-timing-div">
-                                <label class="align-text-middle" for="lesson-duration">Duration</label>
-                                <input id="lesson-duration" type="range" value="40" step="5" min="5" max="90">
-                                <output style="display: inline-block">40</output> minutes
-                            </div>
-
-                            <div class="bootstrap-timepicker timepicker">
+                            <div class="bootstrap-timepicker timepicker second-timepicker">
                                 <label for="timepicker2">End Time</label>
                                 <input id="timepicker2" type="text" class="form-control input-small">
+                            </div>
+
+                            <div class="align-text-middle precise-lesson-timing-div">
+                                <label class="align-text-middle" for="lesson-duration">Duration</label>
+                                <input id="lesson-duration" type="range" value="40" step="5" min="5" max="180">
+                                <output id="lesson-duration-output" style="display: inline-block">40</output> minutes
                             </div>
                         </div>
                         <div class="d-flex justify-content-end">
