--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -321,6 +321,10 @@ img {
     padding: 0.5rem;
 }
 
+.second-timepicker {
+    margin-top: 1.7rem;
+}
+
 .precise-lesson-timing-div {
     margin-top: 1.7rem;
     margin-bottom: 1.7rem;
