Added a few missing subjects

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -35,6 +35,22 @@
 
             <div class="row justify-content-center class-timetable-subject-row">
                 <div class="col-sm-2">
+                    <div id="subject-reading" class="btn rounded subject-reading class-timetable-button"
+                    type="button" draggable="true">Reading</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-art" class="btn rounded subject-art class-timetable-button"
+                    type="button" draggable="true">Art</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-soft-start" class="btn rounded subject-soft-start class-timetable-button"
+                    type="button" draggable="true">Soft Start</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-rme" class="btn rounded subject-rme class-timetable-button"
+                    type="button" draggable="true">R.M.E</div>
+                </div>
+                <div class="col-sm-2">
                     <div id="subject-golden-time" class="btn rounded subject-golden-time class-timetable-button"
                     type="button" draggable="true">Golden Time</div>
                 </div>
@@ -42,9 +58,18 @@
                     <div id="subject-other" class="btn rounded subject-other class-timetable-button"
                     type="button" draggable="true">Other</div>
                 </div>
+
             </div>
 
             <div class="row justify-content-center class-timetable-subject-row">
+                <div class="col-sm-2">
+                    <div id="subject-spelling" class="btn rounded subject-spelling class-timetable-button"
+                    type="button" draggable="true">Spelling</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-numeracy" class="btn rounded subject-numeracy class-timetable-button"
+                    type="button" draggable="true">Numeracy</div>
+                </div>
                 <div class="col-sm-2">
                     <div id="subject-ict" class="btn rounded subject-ict class-timetable-button"
                     type="button" draggable="true">ICT</div>
@@ -61,25 +86,9 @@
                     <div id="subject-health" class="btn rounded subject-health class-timetable-button"
                     type="button" draggable="true">Health</div>
                 </div>
-                <div class="col-sm-2">
-                    <div id="subject-teacher-covertime" class="btn rounded subject-teacher-covertime class-timetable-button"
-                    type="button" draggable="true">RCCT</div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="subject-assembly" class="btn rounded subject-assembly class-timetable-button"
-                    type="button" draggable="true">Assembly</div>
-                </div>
             </div>
 
             <div class="row justify-content-center class-timetable-subject-row">
-                <div class="col-sm-2">
-                    <div id="subject-reading" class="btn rounded subject-reading class-timetable-button"
-                    type="button" draggable="true">Reading</div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="subject-spelling" class="btn rounded subject-spelling class-timetable-button"
-                    type="button" draggable="true">Spelling</div>
-                </div>
                 <div class="col-sm-2">
                     <div id="subject-writing" class="btn rounded subject-writing class-timetable-button"
                     type="button" draggable="true">Writing</div>
@@ -96,6 +105,15 @@
                     <div id="subject-physical-education" class="btn rounded subject-physical-education class-timetable-button"
                     type="button" draggable="true">P.E.</div>
                 </div>
+                <div class="col-sm-2">
+                    <div id="subject-assembly" class="btn rounded subject-assembly class-timetable-button"
+                    type="button" draggable="true">Assembly</div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="subject-teacher-covertime" class="btn rounded subject-teacher-covertime class-timetable-button"
+                    type="button" draggable="true">RCCT</div>
+                </div>
+
             </div>
         </div>
     </aside>
