--- a/server/public/stylesheets/timetable-colours.css
+++ b/server/public/stylesheets/timetable-colours.css
@@ -7,6 +7,11 @@
     color: black;
 }
 
+.subject-numeracy {
+    background-color: rgba(165, 236, 250, 0.5);
+    color: black;
+}
+
 .subject-writing {
     background-color: rgba(20, 171, 20, 0.5);
     color: black;
@@ -77,6 +82,22 @@
     background-color: rgba(255, 0, 0, 0.65);
     color: black;
 }
+
+.subject-art {
+    background-color: rgba(254, 255, 166, 0.65);
+    color: black;
+}
+
+.subject-rme {
+    background-color: rgba(28, 0, 255, 0.51);
+    color: black;
+}
+
+.subject-soft-start {
+    background-color: rgba(104, 255, 250, 0.65);
+    color: black;
+}
+
 /* ================= */
 /*   Colours - END */
 /* ================= */
