--- a/server/public/stylesheets/timetable-colours.css
+++ b/server/public/stylesheets/timetable-colours.css
@@ -2,13 +2,18 @@
 /*   Colours - START */
 /* ================= */
 
-.subject-maths {
-    background-color: rgba(135, 206, 250, 0.5);
+.subject-numeracy {
+    background-color: rgba(58, 212, 250, 0.5);
     color: black;
 }
 
-.subject-numeracy {
-    background-color: rgba(165, 236, 250, 0.5);
+.subject-maths {
+    background-color: rgb(54, 197, 250);
+    color: black;
+}
+
+.subject-ict {
+    background-color: rgba(104, 255, 250, 0.65);
     color: black;
 }
 
@@ -17,22 +22,17 @@
     color: black;
 }
 
-.subject-reading {
+.subject-spelling {
     background-color: rgba(138, 227, 3, 0.5);
     color: black;
 }
 
-.subject-spelling {
+.subject-reading {
     background-color: rgba(47, 233, 162, 0.5);
     color: black;
 }
 
-.subject-physical-education {
-    background-color: rgba(255, 127, 41, 0.5);
-    color: black;
-}
-
-.subject-topic {
+.subject-music {
     background-color: rgba(233, 225, 8, 0.5);
     color: black;
 }
@@ -43,27 +43,32 @@
     color: grey;
 }
 
-.subject-ict {
-    background-color: rgba(255, 81, 0, 0.8);
+.subject-rme {
+    background-color: rgba(255, 81, 0, 0.76);
     color: black;
 }
 
-.subject-music {
-    background-color: rgba(226, 180, 140, 0.5);
+.subject-teacher-covertime {
+    background-color: rgba(171, 165, 188, 0.9);
     color: black;
 }
 
 .subject-health {
-    background-color: rgba(80, 80, 237, 0.5);
-    color: black;
-}
-
-.subject-drama {
-    background-color: rgba(218, 129, 255, 0.5);
+    background-color: rgba(147, 121, 237, 0.85);
     color: black;
 }
 
 .subject-golden-time {
+    background-color: rgba(255, 127, 41, 0.5);
+    color: black;
+}
+
+.subject-physical-education {
+    background-color: rgba(242, 84, 255, 0.5);
+    color: black;
+}
+
+.subject-drama {
     background-color: rgba(203, 148, 0, 0.69);
     color: black;
 }
@@ -73,8 +78,8 @@
     color: black;
 }
 
-.subject-teacher-covertime {
-    background-color: rgba(0, 53, 60, 0.2);
+.subject-soft-start {
+    background-color: rgba(185, 210, 173, 0.2);
     color: black;
 }
 
@@ -88,15 +93,12 @@
     color: black;
 }
 
-.subject-rme {
-    background-color: rgba(28, 0, 255, 0.51);
+.subject-topic {
+    background-color: rgb(120, 56, 255);
     color: black;
 }
 
-.subject-soft-start {
-    background-color: rgba(104, 255, 250, 0.65);
-    color: black;
-}
+
 
 /* ================= */
 /*   Colours - END */
