--- a/server/app/views/signupNew.scala.html
+++ b/server/app/views/signupNew.scala.html
@@ -164,7 +164,7 @@
                                 <label class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input" required>
                                     <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description"> have read the <a href="#">terms and
+                                    <span class="custom-control-description"> I have read the <a href="#">terms and
                                         conditions</a> and agree to them.</span>
                                 </label>
                             </div>
