changing the sizes of photos

--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -133,7 +133,7 @@
                             <a href="" class="btn btn-outline-secondary btn-lg" role="button">Get in on the action</a>
                         </div>
                         <div class="col-lg-6 text-sm-center d-none d-md-block">
-                            <img src="@routes.Assets.versioned("images/phone.png")" alt="phone">
+                            <img src="@routes.Assets.versioned("images/phone.jpg")" alt="phone">
                         </div>
                     </div>
                 </div>
