--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -64,7 +64,7 @@
                 <img id="ttt-logo-front-page" src="@routes.Assets.versioned("icons/ttt_logo_white.png")" alt="TTT Logo" height="128px">
                 <h2 class="display-5">Easy planning for busy teachers</h2>
                 <p>Designed specfically for primary school teachers</p>
-                <a href="#pricing" class="btn btn-lg btn-success">Learn more</a>
+                <a href="#feature-one" class="btn btn-lg btn-success">Learn more</a>
             </div>
         </div>
 
@@ -90,6 +90,8 @@
                 </div>
             </div>
         </div>
+
+        @if(false){
 
         <section id="feature-one">
             <div class="container">
@@ -470,6 +472,7 @@
             </div>
         </section>
 
+        }
 
         <section id="about">
             <div class="section-content">
