--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -13,105 +13,12 @@
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/utils.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signin.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signout.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/facebook-login.js")"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("icons/ttt_owl.png")">
     </head>
     <body>
-        <div id="fb-root"></div>
-        <script>(function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=377986715954577';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
-
-        <script>
-                // This is called with the results from from FB.getLoginStatus().
-                function statusChangeCallback(response) {
-                    console.log('statusChangeCallback');
-                    console.log(response);
-                    // The response object is returned with a status field that lets the
-                    // app know the current login status of the person.
-                    // Full docs on the response object can be found in the documentation
-                    // for FB.getLoginStatus().
-                    if (response.status === 'connected') {
-                        // Logged into your app and Facebook.
-                        testAPI();
-                    }
-//                    else {
-//                        // The person is not logged into your app or we are unable to tell.
-//                        document.getElementById('status').innerHTML = 'Please log ' +
-//                                'into this app.';
-//                    }
-                }
-
-                // This function is called when someone finishes with the Login
-                // Button.  See the onlogin handler attached to it in the sample
-                // code below.
-                function checkLoginState() {
-                    FB.getLoginStatus(function (response) {
-                        statusChangeCallback(response);
-                    });
-                }
-
-                window.fbAsyncInit = function () {
-                    FB.init({
-                        appId: '{your-app-id}',
-                        cookie: true,  // enable cookies to allow the server to access
-                                       // the session
-                        xfbml: true,  // parse social plugins on this page
-                        version: 'v2.8' // use graph api version 2.8
-                    });
-
-                    // Now that we've initialized the JavaScript SDK, we call
-                    // FB.getLoginStatus().  This function gets the state of the
-                    // person visiting this page and can return one of three states to
-                    // the callback you provide.  They can be:
-                    //
-                    // 1. Logged into your app ('connected')
-                    // 2. Logged into Facebook, but not your app ('not_authorized')
-                    // 3. Not logged into Facebook and can't tell if they are logged into
-                    //    your app or not.
-                    //
-                    // These three cases are handled in the callback function.
-
-                    FB.getLoginStatus(function (response) {
-                        statusChangeCallback(response);
-                    });
-
-                };
-
-                // Load the SDK asynchronously
-                (function (d, s, id) {
-                    var js, fjs = d.getElementsByTagName(s)[0];
-                    if (d.getElementById(id)) return;
-                    js = d.createElement(s);
-                    js.id = id;
-                    js.src = "https://connect.facebook.net/en_US/sdk.js";
-                    fjs.parentNode.insertBefore(js, fjs);
-                }(document, 'script', 'facebook-jssdk'));
-
-                // Here we run a very simple test of the Graph API after login is
-                // successful.  See statusChangeCallback() for when this call is made.
-                function testAPI() {
-                    console.log('Welcome!  Fetching your information.... ');
-                    FB.api('/me?fields=id,name,picture,first_name,last_name,age_range,verified,email', function (response) {
-                        console.log('FB ID:: ' + response.id);
-                        console.log('FB Full Name: ' + response.name);
-                        console.log('FB Given Name: ' + response.first_name);
-                        console.log('FB Family Name: ' + response.last_name);
-                        console.log('FB Image URL: ' + response.picture.data.url);
-                        console.log('FB Email: ' + response.email);
-                    });
-
-
-
-
-                }
-        </script>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#startupNavbar" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -186,7 +93,7 @@
                             <div class="loginButtonGroup border border-secondary rounded" >
 
                                 <div class="d-flex justify-content-center loginButton">
-                                    <div class="fb-login-button" data-max-rows="1" data-size="medium" data-button-type="continue_with"
+                                    <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with"
                                     scope="public_profile,email"
                                     data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
                                 </div>
@@ -195,9 +102,10 @@
                                     <div class="g-signin2"
                                     data-longtitle="true"
                                     data-onsuccess="onSignIn"
-                                    data-theme="light"></div>
+                                    data-width="254"
+                                    data-height="40"
+                                    data-theme="dark"></div>
                                 </div>
-
 
                             </div>
 
@@ -252,7 +160,6 @@
         integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-        @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 
 
     </body>
