--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -93,7 +93,7 @@
                             <div class="loginButtonGroup border border-secondary rounded" >
 
                                 <div class="d-flex justify-content-center loginButton">
-                                    <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with"
+                                    <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with"
                                     scope="public_profile,email"
                                     data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
                                 </div>
