--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -120,8 +120,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                                &copy; 2017 Startup.logo is not a real thing. If it is, this site was not meant
-                            to be a mockery of it
+                                &copy; 2017 Time To Teach Ltd
                         <br>
                         Coded by <a href="http://andyboyle.io">Andy</a>
                     </div>
