--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -8,7 +8,6 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/utils.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signin.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signout.js")"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("icons/ttt_owl.png")">
@@ -20,7 +19,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#startupNavbar" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
                 <span class="ttt-icon-writing display-5">Time to TEACH</span>
             </a>
@@ -28,7 +27,7 @@
             <div class="collapse navbar-collapse" id="startupNavbar">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#feature-one">Features</a>
@@ -87,8 +86,6 @@
             </div>
         </div>
 
-        @if(false){
-
         <section id="feature-one">
             <div class="container">
                 <div class="row">
@@ -115,6 +112,8 @@
                 </div>
             </div>
         </section>
+
+        @if(false){
 
         <section id="feature-two" class="feature-dark">
             <div class="container">
@@ -548,6 +547,5 @@
         integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-        @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
     </body>
 </html>
