--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -12,15 +12,15 @@
                     <h3 class="display-5 text-center">Planning</h3>
                     <a class="btn btn-primary btn-lg dashboard-button" href="@routes.Application.classTimetable()" role="button">
                         Class Timetable</a>
-                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Termly Plans</button>
-                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Weekly Plan</button>
+                    <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Termly Plans</button>
+                    <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Weekly Plan</button>
                 </div>
                 <div class="col-sm-1">
                 </div>
                 <div class="col-sm-5 dashboardFadedBackground">
                     <h3 class="display-5 text-center">Resources</h3>
-                    <button type="button" class="btn btn-primary btn-lg dashboard-button">IDL</button>
-                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Lesson Ideas</button>
+                    <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">IDL</button>
+                    <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Lesson Ideas</button>
                 </div>
             </div>
 
@@ -29,17 +29,17 @@
             <div class="row">
                 <div class="col-sm-5 dashboardFadedBackground">
                     <h3 class="display-5 text-center">Communication</h3>
-                    <button type="button" class="btn btn-primary btn-lg dashboard-button">School Noticeboard</button>
-                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Time To Teach Community</button>
-                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Parents</button>
+                    <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">School Noticeboard</button>
+                    <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Time To Teach Community</button>
+                    <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Parents</button>
                 </div>
                 <div class="col-sm-1">
                 </div>
                 <div class="col-sm-5 dashboardFadedBackground">
                     <h3 class="display-5 text-center">Admin & Reports</h3>
-                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Staff</button>
-                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Classrooms</button>
-                    <button type="button" class="btn btn-primary btn-lg dashboard-button">Reports</button>
+                    <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Staff</button>
+                    <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Classrooms</button>
+                    <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Reports</button>
                 </div>
             </div>
         </div>
