--- a/server/app/views/loggedOutSuccessfully.scala.html
+++ b/server/app/views/loggedOutSuccessfully.scala.html
@@ -1,4 +1,5 @@
-@main("Time To Teach",None, None) {
+@(showFrontPageFeatures : Boolean)
+@main("Time To Teach",None, None, showFrontPageFeatures) {
     <p>Logged Out Successfully</p>
 
     <script>
