--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String, userPictureUri: Option[String], userFirstName: Option[String])(content: Html)
+@(title: String, userPictureUri: Option[String], userFirstName: Option[String], showFrontPageFeatures : Boolean)(content: Html)
 <!DOCTYPE html>
 <html>
     <head>
@@ -113,7 +113,7 @@
             </div>
         </section>
 
-        @if(false){
+        @if(showFrontPageFeatures){
 
         <section id="feature-two" class="feature-dark">
             <div class="container">
