--- a/server/app/views/weeklyplanning.scala.html
+++ b/server/app/views/weeklyplanning.scala.html
@@ -1,7 +1,7 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, message: String, userPictureUri: Option[String], userFirstName: Option[String])(implicit request: AuthenticatedRequest[Any])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, message: String, userPictureUri: Option[String], userFirstName: Option[String], showFrontPageFeatures : Boolean)(implicit request: AuthenticatedRequest[Any])
 
-@main("Time To Teach App", userPictureUri, userFirstName) {
+@main("Time To Teach App", userPictureUri, userFirstName, showFrontPageFeatures) {
 
     <h2>Weekly Planning</h2>
 
