--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -57,11 +57,9 @@
         <div id="stage">
             <div id="stage-caption">
                 <img id="ttt-logo-front-page" src="@routes.Assets.versioned("icons/ttt_logo_white.png")" alt="TTT Logo" height="128px">
-                @*<h2 class="display-5">Easy planning for busy teachers</h2>*@
-                @*<br>*@
-                <h2 class="display-5">Thank you for your time Dragons!</h2>
-                @*<p>Designed specfically for primary school teachers</p>*@
-                @*<a href="#feature-one" class="btn btn-lg btn-success">Learn more</a>*@
+                <h2 class="display-5">Easy planning for busy teachers</h2>
+                <p>Designed specfically for primary school teachers</p>
+                <a href="#feature-one" class="btn btn-lg btn-success">Learn more</a>
             </div>
         </div>
 
